--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <h1>Bill is my Fave</h1>
     <img src="http://fillmurray.com/400/200" alt="image of Bill Murray">
     <hr>
+    <section>
+      <a href="https://en.wikipedia.org/wiki/Bill_Murray">William James Murray</a> (born September 21, 1950) is an American actor, comedian, and writer. He first gained exposure on Saturday Night Live, a role that earned him his first Emmy Award, and later starred in comedy films—including Meatballs (1979), Caddyshack (1980), Stripes (1981), Tootsie (1982), Ghostbusters (1984), Scrooged (1988), Ghostbusters II (1989), What About Bob? (1991), and Groundhog Day (1993). He also co-directed Quick Change (1990).
+
+      <blockquote>Movie acting suites me because I only need to be good for nintey seconds at a time.</blockquote>
+    </section>
 
   </body>
 </html>
