--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
       <blockquote>Movie acting suites me because I only need to be good for nintey seconds at a time.</blockquote>
     </section>
+<section>
+  <h2>Early Life</h2>
+  <p>Murray was born on September 21, 1950 in Evanston, Illinois, and was raised in Wilmette, Illinois, a northern suburb of Chicago. He is the son of Lucille (née Collins), a mail room clerk, and Edward Joseph Murray II, a lumber salesman.</p>
+</section>
 
   </body>
 </html>
