--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
   <h2>Early Life</h2>
   <p>Murray was born on September 21, 1950 in Evanston, Illinois, and was raised in Wilmette, Illinois, a northern suburb of Chicago. He is the son of Lucille (née Collins), a mail room clerk, and Edward Joseph Murray II, a lumber salesman.</p>
 </section>
-
+<section>
+  <h2>Career</h2>
+  <h3>Saturday Night Live</h3>
+  <p>In 1975, an Off-Broadway version of a Lampoon show led to his first television role as a cast member of the ABC variety show Saturday Night Live with Howard Cosell.</p>
+  <h3>Top Grossing Movies</h3>
+  <ul>
+    <li>Meatballs</li>
+    <li>Caddyshack</li>
+    <li>Ghostbusters</li>
+    <li>Ghostbusters 2</li>
+  </ul>
+</section>
   </body>
 </html>
