--- a/table.html
+++ b/table.html
@@ -5,6 +5,47 @@
     <title>Bill Murray table</title>
   </head>
   <body>
-    
+    <table>
+      <tr>
+        <th>Film Title</th>
+        <th>Character</th>
+        <th>Date</th>
+      </tr>
+      <tr>
+        <td>Isle of Dogs</td>
+        <td>voice</td>
+        <td>2018</td>
+      </tr>
+      <tr>
+        <td>Ghostbusters</td>
+        <td>Martin Heiss</td>
+        <td>2016</td>
+      </tr>
+      <tr>
+        <td>The Jungle Book</td>
+        <td>Baloo</td>
+        <td>2016</td>
+      </tr>
+      <tr>
+        <td>Rock the Kasbah</td>
+        <td>Rickie Lanz</td>
+        <td>2015</td>
+      </tr>
+      <tr>
+        <td>Aloha</td>
+        <td>Carson Welch</td>
+        <td>2015</td>
+      </tr>
+      <tr>
+        <td>Dumb and Dumber 2</td>
+        <td>Ice Pick</td>
+        <td>2014</td>
+      </tr>
+      <tr>
+        <td>St. Vincent</td>
+        <td>Vincent</td>
+        <td>2014</td>
+      </tr>
+    </table>
   </body>
 </html>
