--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Bill Murray HTML Practice</title>
   </head>
   <body>
-    <h1>Bill is my Fave</h1>
+    <h1><a href="./table.html">Bill is my Fave</a></h1>
     <img src="http://fillmurray.com/400/200" alt="image of Bill Murray">
     <hr>
     <section>
